...
            })
        }
    }
    
    func showFileExistsAlert(to viewController: UIViewController?) {
        let alertView = UIAlertController(title: nil, message: NSLocalizedString("ErrorFileAlreadyExists", comment:"error message if a file with the given name already exists & ask for override"), preferredStyle: .alert)
        alertView.addAction(UIAlertAction(title: NSLocalizedString("Override", comment:""), style: .destructive, handler: {
            (action) -> Void in
            self.override()
        }))
        alertView.addAction(UIAlertAction(title: NSLocalizedString("Cancel", comment:""), style: .cancel, handler: {
            (action) -> Void in
            self.callCompletion(success: false, url: nil)
        }))
        
        viewController?.present(alertView, animated: true, completion: nil)
    }
...
